# Agent-IA-Prompt-Builders-Project

./: README.md  requirements.txt  sonar-project.properties
.github/workflows/: sonarcloud.yml
.kiro/specs/auditor-core/: design.md  requirements.md  tasks.md
.kiro/steering/: structure.md  tech.md
Auditor-Agent/: README.md  pyproject.toml  requirements.txt
Auditor-Agent/.github/workflows/: ci.yml
Auditor-Agent/.kiro/specs/auditor-core/: tasks.md
Auditor-Agent/.kiro/steering/: product.md  tech.md
Auditor-Agent/src/auditor_agent/: analyzer.py  main.py  report.py
Auditor-Agent/src/auditor_agent/api/: app.py
Auditor-Agent/src/auditor_agent/rules/: __init__.py  security_rules.py
infra/: README.md  lambda_handler.py  template.yaml
src/auditor_agent/: __init__.py
src/auditor_agent/api/: __init__.py  app.py
src/auditor_agent/integrations/: __init__.py  review_agent.py  sonarcloud_client.py
src/auditor_agent/rules/: lint_rules.py
tests/: test_analyzer.py
